# os-net-config

./: pyproject.toml
os_net_config/: cli.py  impl_nmstate.py  sriov_config.py
os_net_config/tests/: test_sriov_config.py
rpm/: os-net-config.spec
